Fix table width to avoid overflow

--- a/packages/edit-site/src/components/sidebar/navigation-menu-sidebar/style.scss
+++ b/packages/edit-site/src/components/sidebar/navigation-menu-sidebar/style.scss
@@ -26,3 +26,8 @@
 	margin-left: $grid-unit-30;
 	width: 50%;
 }
+
+.edit-site-navigation-inspector .block-editor-list-view-tree {
+	// do not allow width to expand beyond containing element width.
+	table-layout: fixed;
+}
